# wgpu-egui-template

./: Cargo.toml  README.md
src/: app.rs  camera.rs  egui_tools.rs  main.rs
src/raytracing/: mod.rs  ray.rs  renderer.rs  traversal.rs
src/shaders/: raytracer.wgsl
src/voxel/: types.rs
src/world/: chunk.rs  mod.rs  svo.rs
