[package]
name = "egui-rust-wgpu-hello"
version = "1.0.0"
edition = "2021"

[dependencies]
egui = "0.31.1"
egui-wgpu = { version = "0.31.1",features = ["winit"] }
egui-winit = "0.31.1"
winit = "0.30.9"
pollster = "0.4.0"
bytemuck = { version = "1.22.0", features = ["derive"] }
glam = "0.30.1"
noise = "0.9.0"
half = "2.4.1"
ahash = "0.8.11"
rayon = "1.10.0"
atomic_float = "1.1.0"
