[package]
name = "egui-rust-wgpu-hello"
version = "1.0.0"
edition = "2021"

[dependencies]
egui = "0.31.1"
egui-wgpu = { version = "0.31.1",features = ["winit"] }
egui-winit = "0.31.1"
winit = "0.30.9"
pollster = "0.4.0"
bytemuck = { version = "1.22.0", features = ["derive"] }
glam = "0.30.1"
noise = "0.9.0"
